--- a/default/templates/default/poll_detail.html
+++ b/default/templates/default/poll_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<a href="/poll/">返回主題列表</a>
 <hl>{{ poll.subject  }}</hl>
 <p>{{ poll.description }}</p>
 <p>建立日期:{{ poll.date_created }}</p>
@@ -8,7 +9,7 @@
 <ul>
     {% for option in option_list %}
     <li>
-        <a href="/option/{{ option.id }}"{{ option.title }}</a>
+        <a href="/option/{{ option.id }}">{{ option.title }}</a>
         {{ option.count }}票</li>
     {% endfor %}
 </ul>
