--- a/default/templates/default/poll_list.html
+++ b/default/templates/default/poll_list.html
@@ -9,7 +9,8 @@
         {{ poll.date_created }} -
         <a href="/poll/{{ poll.id }}/">{{ poll.subject }}</a>
             <a href="/poll/{{ poll.id }}/edit/">修改</a>
-    <li>
+            <a href="/poll/{{ poll.id }}/delete/">刪除</a>
+    </li>
     {% endfor %}   
 </ul>
 {% endblock %}
